@@ -15,6 +15,7 @@ git-annex (6.20160230) UNRELEASED; urgency=medium
   * Correct git-annex info to include unlocked files in v6 repository.
   * Sped up git-annex add in direct mode and v6 by using
     git hash-object --batch.
+  * Sped up git-annex merge by using git hash-object --batch.
 
  -- Joey Hess <id@joeyh.name>  Mon, 29 Feb 2016 13:00:30 -0400
 
